--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,19 @@
-# main links
-main:
-  - title: "National Math Camp"
-    url: https://nationalcamp.github.io
+# Hompeage links
+home:
+  - title: "Home"
+    url: /
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
-  - title: "Sample Collections"
-    url: /collection-archive/
+  - title: "NMC 2025"
+    url: /2025/
   # - title: "Sitemap"
   #   url: /sitemap/
+
+camp25:
+  - title : "NMC 2025"
+    url : /2025
+
+  - title : "Images"
+    url : /2025/images
