--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,10 @@ minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "n
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "National Math Camp"
+title                    : "ভেজা দুটো কাক"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "National Math Camp"
+name                     : "ভেজা দুটো কাক"
 description              : ""
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
